remove new conf